deploy/argocd/apps/longhorn/kustomize/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    # cert-manager will create longhorn-cert-tls secret in longhorn-system
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
    kind: Gateway
    sectionName: https
  hostnames:
  - "longhorn.gigix"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
